[package]
name = "larix-lending-anchor"
version = "0.2.0"
edition = "2021"

description = "Larix Lending Anchor Adaptor"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = ">=0.22.0"
thiserror = "1.0.31"
larix-lending = { git = "https://github.com/ProjectLarix/larix-lending" }
